--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Yasser Carreón",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jade": "^1.11.0",
     "mongoose": "^4.7.0"
