--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jade": "^1.11.0",
-    "mongoose": "^4.7.0"
+    "mongoose": "^4.7.0",
+    "multer": "^1.2.0"
   }
 }
