--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.14.0",
     "jade": "^1.11.0",
     "mongoose": "^4.7.0",
-    "multer": "^1.2.0"
+    "multer": "^1.2.0",
+    "node-uuid": "^1.4.7"
   }
 }
